# log4cpp

./: .gitignore  CMakeLists.txt  Configure.cmake  meson.build  meson_options.txt
doc/: Doxyfile.in  meson.build
include/: config-cmake.h.in
tests/: CMakeLists.txt  meson.build
